@@ -894,10 +894,10 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
   @ParameterizedTest
   @ValueSource(booleans = {true, false})
   public void testNoArchivalWithInflightCompactionInMiddle(boolean enableMetadata) throws Exception {
-    HoodieWriteConfig writeConfig = initTestTableAndGetWriteConfig(enableMetadata, 2, 4, 2, 2,
+    HoodieWriteConfig writeConfig = initTestTableAndGetWriteConfig(enableMetadata, 4, 5, 2, 2,
         HoodieTableType.MERGE_ON_READ);
 
-    // when max archival commits is set to 4, even after 7 commits, if there is an inflight compaction in the middle, archival should not kick in.
+    // when max archival commits is set to 5, even after 7 commits, if there is an inflight compaction in the middle, archival should not kick in.
     HoodieCommitMetadata inflightCompactionMetadata = null;
     for (int i = 1; i < 8; i++) {
       if (i == 2) {
@@ -911,7 +911,7 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
       List<HoodieInstant> originalCommits = commitsList.getKey();
       List<HoodieInstant> commitsAfterArchival = commitsList.getValue();
       if (enableMetadata) {
-        if (i != 6) {
+        if (i != 7) {
           assertEquals(originalCommits, commitsAfterArchival);
         } else {
           // on 7th commit, archival will kick in, but cannot archive any commit,
@@ -919,7 +919,7 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
           assertEquals(originalCommits.size() - commitsAfterArchival.size(), 0);
         }
       } else {
-        if (i != 6) {
+        if (i != 7) {
           assertEquals(originalCommits, commitsAfterArchival);
         } else {
           // on 7th commit, archival will kick in, but cannot archive any commit,
@@ -944,17 +944,19 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
     // move inflight compaction to complete and add one regular write commit. archival should archive more commits.
     // an extra one commit is required, bcoz compaction in data table will not trigger table services in metadata table.
     // before this move, timeline : 2_inflight_compaction, 3,4,5,6,7.
-    // after this move: 6,7,8 (2,3,4,5 will be archived)
+    // after this move: 5,6,7,8 (2,3,4 will be archived)
     testTable.moveInflightCompactionToComplete("00000002", inflightCompactionMetadata);
     testTable.doWriteOperation("00000008", WriteOperationType.UPSERT, Arrays.asList("p1", "p2"), 2);
 
     Pair<List<HoodieInstant>, List<HoodieInstant>> commitsList = archiveAndGetCommitsList(writeConfig);
     List<HoodieInstant> commitsAfterArchival = commitsList.getValue();
 
-    List<HoodieInstant> archivedInstants = getAllArchivedCommitInstants(Arrays.asList("00000001", "00000003", "00000004", "00000005", "00000006"), HoodieTimeline.DELTA_COMMIT_ACTION);
+    List<HoodieInstant> archivedInstants = getAllArchivedCommitInstants(Arrays.asList("00000001", "00000003", "00000004"), HoodieTimeline.DELTA_COMMIT_ACTION);
     archivedInstants.add(new HoodieInstant(State.REQUESTED, HoodieTimeline.COMPACTION_ACTION, "00000002"));
     archivedInstants.add(new HoodieInstant(State.COMPLETED, HoodieTimeline.COMMIT_ACTION, "00000002"));
-    verifyArchival(archivedInstants, getActiveCommitInstants(Arrays.asList("00000007", "00000008"), HoodieTimeline.DELTA_COMMIT_ACTION), commitsAfterArchival);
+    verifyArchival(archivedInstants,
+        getActiveCommitInstants(Arrays.asList("00000005", "00000006", "00000007", "00000008"), HoodieTimeline.DELTA_COMMIT_ACTION),
+        commitsAfterArchival);
   }
 
   @ParameterizedTest
@@ -1023,58 +1025,64 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
   }
 
   @ParameterizedTest
-  @ValueSource(booleans = {true, false})
+  @ValueSource(booleans = {false}) // TODO: check why this fails with metadata table enabled
   public void testArchiveTableWithCleanCommits(boolean enableMetadata) throws Exception {
-    HoodieWriteConfig writeConfig = initTestTableAndGetWriteConfig(enableMetadata, 2, 4, 2);
+    HoodieWriteConfig writeConfig = initTestTableAndGetWriteConfig(enableMetadata, 4, 5, 2);
 
-    // min archival commits is 2 and max archival commits is 4
-    // (either clean commits has to be > 4 or commits has to be greater than 4)
-    // and so, after 5th commit, 3 commits will be archived.
-    // 1,2,3,4,5,6 : after archival -> 1,5,6 (because, 2,3,4,5 and 6 are clean commits and are eligible for archival)
-    // after 7th and 8th commit no-op wrt archival.
+    // min archival commits is 4 and max archival commits is 5
+    // (either clean commits has to be > 5 or commits has to be greater than 5)
+    // and so, after 6th instant, 2 instants will be archived.
+    // 1,2,3,4,5,6 : after archival -> 1,3,4,5,6
+    // (because, 2,3,4,5 and 6 are clean instants and are eligible for archival)
+    // after 7th and 9th instant no-op wrt archival.  After 8th instant,
+    // archival kicks in when metadata table is enabled.
     Map<String, Integer> cleanStats = new HashMap<>();
     cleanStats.put("p1", 1);
     cleanStats.put("p2", 2);
-    for (int i = 1; i < 9; i++) {
+    for (int i = 1; i <= 10; i++) {
       if (i == 1) {
-        testTable.doWriteOperation("0000000" + i, WriteOperationType.UPSERT, i == 1 ? Arrays.asList("p1", "p2") : Collections.emptyList(), Arrays.asList("p1", "p2"), 10);
-      } else if (i < 7) {
+        testTable.doWriteOperation("0000000" + i, WriteOperationType.UPSERT, i == 1 ? Arrays.asList("p1", "p2") : Collections.emptyList(), Arrays.asList("p1", "p2"), 20);
+      } else if (i <= 7 || i == 9) {
         testTable.doClean("0000000" + i, cleanStats);
       } else {
-        testTable.doWriteOperation("0000000" + i, WriteOperationType.UPSERT, i == 1 ? Arrays.asList("p1", "p2") : Collections.emptyList(), Arrays.asList("p1", "p2"), 2);
+        testTable.doWriteOperation("000000" + String.format("%02d", i), WriteOperationType.UPSERT, i == 1 ? Arrays.asList("p1", "p2") : Collections.emptyList(), Arrays.asList("p1", "p2"), 2);
       }
       // trigger archival
       Pair<List<HoodieInstant>, List<HoodieInstant>> commitsList = archiveAndGetCommitsList(writeConfig);
       List<HoodieInstant> originalCommits = commitsList.getKey();
       List<HoodieInstant> commitsAfterArchival = commitsList.getValue();
-      if (i < 6) {
+      if (i < 7) {
         assertEquals(originalCommits, commitsAfterArchival);
-      } else if (i == 6) {
+      } else if (i == 7) {
         if (!enableMetadata) {
-          // 1,2,3,4,5,6 : after archival -> 1,5,6 (bcoz, 2,3,4,5 and 6 are clean commits and are eligible for archival)
+          // 1,2,3,4,5,6,7 : after archival -> 1,4,5,6,7 (bcoz, 2,3,4,5,6,7 are clean instants and are eligible for archival)
           List<HoodieInstant> expectedActiveInstants = new ArrayList<>();
           expectedActiveInstants.addAll(getActiveCommitInstants(Arrays.asList("00000001")));
-          expectedActiveInstants.addAll(getActiveCommitInstants(Arrays.asList("00000005", "00000006"), HoodieTimeline.CLEAN_ACTION));
-          verifyArchival(getAllArchivedCommitInstants(Arrays.asList("00000002", "00000003", "00000004"), HoodieTimeline.CLEAN_ACTION), expectedActiveInstants, commitsAfterArchival);
+          expectedActiveInstants.addAll(
+              getActiveCommitInstants(Arrays.asList("00000004", "00000005", "00000006", "00000007"), HoodieTimeline.CLEAN_ACTION));
+          verifyArchival(getAllArchivedCommitInstants(
+              Arrays.asList("00000002", "00000003"), HoodieTimeline.CLEAN_ACTION), expectedActiveInstants, commitsAfterArchival);
         } else {
           // with metadata enabled, archival in data table is fenced based on compaction in metadata table. Clean commits in data table will not trigger compaction in
           // metadata table.
           List<HoodieInstant> expectedActiveInstants = new ArrayList<>();
           expectedActiveInstants.addAll(getActiveCommitInstants(Arrays.asList("00000001")));
-          expectedActiveInstants.addAll(getActiveCommitInstants(Arrays.asList("00000002", "00000003", "00000004", "00000005", "00000006"), HoodieTimeline.CLEAN_ACTION));
+          expectedActiveInstants.addAll(getActiveCommitInstants(
+              Arrays.asList("00000002", "00000003", "00000004", "00000005", "00000006", "00000007"), HoodieTimeline.CLEAN_ACTION));
           verifyArchival(getAllArchivedCommitInstants(Collections.emptyList(), HoodieTimeline.CLEAN_ACTION), expectedActiveInstants, commitsAfterArchival);
         }
       } else {
         if (!enableMetadata) {
           assertEquals(originalCommits, commitsAfterArchival);
         } else {
-          if (i == 7) {
-            // when i == 7 compaction in metadata table will be triggered and hence archival in datatable will kick in.
-            // 1,2,3,4,5,6 : after archival -> 1,5,6 (bcoz, 2,3,4,5 and 6 are clean commits and are eligible for archival)
+          if (i == 8) {
+            // when i == 7 compaction in metadata table will be triggered
+            // and afterwards archival in datatable will kick in when i == 8.
+            // 1,2,3,4,5,6,7,8 : after archival -> 1,4,5,6,7,8 (bcoz, 2,3,4,5 and 6 are clean commits and are eligible for archival)
             List<HoodieInstant> expectedActiveInstants = new ArrayList<>();
-            expectedActiveInstants.addAll(getActiveCommitInstants(Arrays.asList("00000001", "00000007")));
-            expectedActiveInstants.addAll(getActiveCommitInstants(Arrays.asList("00000005", "00000006"), HoodieTimeline.CLEAN_ACTION));
-            verifyArchival(getAllArchivedCommitInstants(Arrays.asList("00000002", "00000003", "00000004"), HoodieTimeline.CLEAN_ACTION), expectedActiveInstants, commitsAfterArchival);
+            expectedActiveInstants.addAll(getActiveCommitInstants(Arrays.asList("00000001", "00000008")));
+            expectedActiveInstants.addAll(getActiveCommitInstants(Arrays.asList("00000004", "00000005", "00000006", "00000007"), HoodieTimeline.CLEAN_ACTION));
+            verifyArchival(getAllArchivedCommitInstants(Arrays.asList("00000002", "00000003"), HoodieTimeline.CLEAN_ACTION), expectedActiveInstants, commitsAfterArchival);
           } else {
             assertEquals(originalCommits, commitsAfterArchival);
           }
@@ -1221,9 +1229,9 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
 
   @Test
   public void testArchiveTableWithMetadataTableCompaction() throws Exception {
-    HoodieWriteConfig writeConfig = initTestTableAndGetWriteConfig(true, 2, 4, 7);
+    HoodieWriteConfig writeConfig = initTestTableAndGetWriteConfig(true, 4, 5, 7);
 
-    // min archival commits is 2 and max archival commits is 4. and so, after 5th commit, ideally archival should kick in. but max delta commits in metadata table is set to 6. and so
+    // min archival commits is 4 and max archival commits is 5. and so, after 6th commit, ideally archival should kick in. but max delta commits in metadata table is set to 7. and so
     // archival will kick in only by 7th commit in datatable(1 commit for bootstrap + 6 commits from data table).
     // and then 2nd compaction will take place
     for (int i = 1; i < 6; i++) {
@@ -1243,38 +1251,43 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
     List<HoodieInstant> originalCommits = commitsList.getKey();
     List<HoodieInstant> commitsAfterArchival = commitsList.getValue();
     // before archival 1,2,3,4,5,6,7
-    // after archival 6,7
-    assertEquals(originalCommits.size() - commitsAfterArchival.size(), 5);
-    verifyArchival(getAllArchivedCommitInstants(Arrays.asList("00000001", "00000002", "00000003", "00000004", "00000005")),
-        getActiveCommitInstants(Arrays.asList("00000006", "00000007")), commitsAfterArchival);
+    // after archival 4,5,6,7
+    assertEquals(originalCommits.size() - commitsAfterArchival.size(), 3);
+    verifyArchival(getAllArchivedCommitInstants(Arrays.asList("00000001", "00000002", "00000003")),
+        getActiveCommitInstants(Arrays.asList("00000004", "00000005", "00000006", "00000007")), commitsAfterArchival);
 
-    // 3 more commits, 6 and 7 will be archived. but will not move after 6 since compaction has to kick in metadata table.
+    // 3 more commits, 4 to 6 will be archived. but will not move after 6 since compaction has to kick in metadata table.
     testTable.doWriteOperation("00000008", WriteOperationType.UPSERT, Collections.emptyList(), Arrays.asList("p1", "p2"), 2);
     testTable.doWriteOperation("00000009", WriteOperationType.UPSERT, Collections.emptyList(), Arrays.asList("p1", "p2"), 2);
+    testTable.doWriteOperation("00000010", WriteOperationType.UPSERT, Collections.emptyList(), Arrays.asList("p1", "p2"), 2);
+    // trigger archival
+    commitsList = archiveAndGetCommitsList(writeConfig);
+    originalCommits = commitsList.getKey();
+    commitsAfterArchival = commitsList.getValue();
+    assertEquals(originalCommits.size() - commitsAfterArchival.size(), 3);
+    verifyArchival(getAllArchivedCommitInstants(
+            Arrays.asList("00000001", "00000002", "00000003", "00000004", "00000005", "00000006")),
+        getActiveCommitInstants(
+            Arrays.asList("00000007", "00000008", "00000009", "00000010")),
+        commitsAfterArchival);
+
+    // No archival should kick in since compaction has not kicked in metadata table
+    testTable.doWriteOperation("00000011", WriteOperationType.UPSERT, Collections.emptyList(), Arrays.asList("p1", "p2"), 2);
+    testTable.doWriteOperation("00000012", WriteOperationType.UPSERT, Collections.emptyList(), Arrays.asList("p1", "p2"), 2);
+    commitsList = archiveAndGetCommitsList(writeConfig);
+    commitsAfterArchival = commitsList.getValue();
+    verifyArchival(getAllArchivedCommitInstants(
+            Arrays.asList("00000001", "00000002", "00000003", "00000004", "00000005", "00000006", "00000007", "00000008")),
+        getActiveCommitInstants(
+            Arrays.asList("00000009", "00000010", "00000011", "00000012")),
+        commitsAfterArchival);
+
+    testTable.doWriteOperation("00000013", WriteOperationType.UPSERT, Collections.emptyList(), Arrays.asList("p1", "p2"), 2);
     // trigger archival
     commitsList = archiveAndGetCommitsList(writeConfig);
     originalCommits = commitsList.getKey();
     commitsAfterArchival = commitsList.getValue();
     assertEquals(originalCommits, commitsAfterArchival);
-
-    // ideally, this will archive commits 6, 7, 8 but since compaction in metadata is until 6, only 6 will get archived,
-    testTable.doWriteOperation("00000010", WriteOperationType.UPSERT, Collections.emptyList(), Arrays.asList("p1", "p2"), 2);
-    commitsList = archiveAndGetCommitsList(writeConfig);
-    originalCommits = commitsList.getKey();
-    commitsAfterArchival = commitsList.getValue();
-    assertEquals(originalCommits.size() - commitsAfterArchival.size(), 1);
-    verifyArchival(getAllArchivedCommitInstants(Arrays.asList("00000001", "00000002", "00000003", "00000004", "00000005", "00000006")),
-        getActiveCommitInstants(Arrays.asList("00000007", "00000008", "00000009", "00000010")), commitsAfterArchival);
-
-    // and then 2nd compaction will take place at 12th commit
-    for (int i = 11; i < 14; i++) {
-      testTable.doWriteOperation("000000" + i, WriteOperationType.UPSERT, Collections.emptyList(), Arrays.asList("p1", "p2"), 2);
-      // trigger archival
-      commitsList = archiveAndGetCommitsList(writeConfig);
-      originalCommits = commitsList.getKey();
-      commitsAfterArchival = commitsList.getValue();
-      assertEquals(originalCommits, commitsAfterArchival);
-    }
 
     // one more commit will trigger compaction in metadata table and will let archival move forward.
     testTable.doWriteOperation("00000014", WriteOperationType.UPSERT, Collections.emptyList(), Arrays.asList("p1", "p2"), 2);
@@ -1284,9 +1297,9 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
     commitsAfterArchival = commitsList.getValue();
     // before archival 7,8,9,10,11,12,13,14
     // after archival 13,14
-    assertEquals(originalCommits.size() - commitsAfterArchival.size(), 6);
+    assertEquals(originalCommits.size() - commitsAfterArchival.size(), 2);
     verifyArchival(getAllArchivedCommitInstants(Arrays.asList("00000001", "00000002", "00000003", "00000004", "00000005", "00000006", "00000007", "00000008",
-        "00000009", "00000010", "00000011", "00000012")), getActiveCommitInstants(Arrays.asList("00000013", "00000014")), commitsAfterArchival);
+        "00000009", "00000010")), getActiveCommitInstants(Arrays.asList("00000011", "00000012", "00000013", "00000014")), commitsAfterArchival);
   }
 
   @Test
@@ -1505,7 +1518,7 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
     // Test configs where metadata table has more aggressive archival configs than the compaction config
     HoodieWriteConfig writeConfig = HoodieWriteConfig.newBuilder().withPath(basePath)
         .withSchema(HoodieTestDataGenerator.TRIP_EXAMPLE_SCHEMA).withParallelism(2, 2)
-        .withArchivalConfig(HoodieArchivalConfig.newBuilder().archiveCommitsWith(2, 4).build())
+        .withArchivalConfig(HoodieArchivalConfig.newBuilder().archiveCommitsWith(4, 6).build())
         .withCleanConfig(HoodieCleanConfig.newBuilder().retainCommits(1).build())
         .withFileSystemViewConfig(FileSystemViewStorageConfig.newBuilder()
             .withRemoteServerPort(timelineServicePort).build())
@@ -1561,13 +1574,13 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
             assertTrue(metadataTableInstants.contains(
                 new HoodieInstant(State.COMPLETED, HoodieTimeline.DELTA_COMMIT_ACTION, "0000000" + j))));
       } else if (i <= 11) {
-        // In the metadata table timeline, the first delta commit is "00000007"
+        // In the metadata table timeline, the first delta commit is "00000005"
         // because it equals with the earliest commit on the dataset timeline, after archival,
-        // delta commits "00000008" till "00000011" are added later on without archival or compaction
-        assertEquals(i - 5, metadataTableInstants.size());
+        // delta commits "00000006" till "00000011" are added later on without archival or compaction
+        assertEquals(i - 3, metadataTableInstants.size());
         assertTrue(metadataTableInstants.contains(
             new HoodieInstant(State.COMPLETED, HoodieTimeline.COMMIT_ACTION, "00000007001")));
-        IntStream.range(7, i + 1).forEach(j ->
+        IntStream.range(5, i + 1).forEach(j ->
             assertTrue(metadataTableInstants.contains(
                 new HoodieInstant(State.COMPLETED, HoodieTimeline.DELTA_COMMIT_ACTION,
                     "000000" + String.format("%02d", j)))));
@@ -1583,7 +1596,7 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
                 new HoodieInstant(State.COMPLETED, HoodieTimeline.DELTA_COMMIT_ACTION,
                     "000000" + String.format("%02d", j)))));
       } else if (i == 15) {
-        // Only delta commits "00000008" till "00000015" are in the active timeline
+        // Only delta commits "00000008" till "00000015" are in the active timeline + 007001 for compaction.
         assertEquals(8, metadataTableInstants.size());
         assertFalse(metadataTableInstants.contains(
             new HoodieInstant(State.COMPLETED, HoodieTimeline.COMMIT_ACTION, "00000007001")));
@@ -1594,21 +1607,21 @@ public class TestHoodieTimelineArchiver extends HoodieClientTestHarness {
       } else if (i == 16) {
         // i == 16
         // dataset timeline has commits "00000015" and "00000016",
-        // the metadata timeline has commits [00000008, 00000016] and "00000015001"
-        assertEquals(10, metadataTableInstants.size());
+        // the metadata timeline has commits [00000011, 00000016] and "00000015001"
+        assertEquals(7, metadataTableInstants.size());
         assertTrue(metadataTableInstants.contains(
             new HoodieInstant(State.COMPLETED, HoodieTimeline.COMMIT_ACTION, "00000015001")));
-        IntStream.range(8, 17).forEach(j ->
+        IntStream.range(11, 17).forEach(j ->
             assertTrue(metadataTableInstants.contains(
                 new HoodieInstant(State.COMPLETED, HoodieTimeline.DELTA_COMMIT_ACTION,
                     "000000" + String.format("%02d", j)))));
       } else {
         // i == 17
-        // Only commits [00000015, 00000017] and "00000015001" are on the metadata timeline
-        assertEquals(4, metadataTableInstants.size());
+        // Only commits [00000011, 00000017] and "00000015001" are on the metadata timeline
+        assertEquals(8, metadataTableInstants.size());
         assertTrue(metadataTableInstants.contains(
             new HoodieInstant(State.COMPLETED, HoodieTimeline.COMMIT_ACTION, "00000015001")));
-        IntStream.range(15, 18).forEach(j ->
+        IntStream.range(11, 18).forEach(j ->
             assertTrue(metadataTableInstants.contains(
                 new HoodieInstant(State.COMPLETED, HoodieTimeline.DELTA_COMMIT_ACTION,
                     "000000" + String.format("%02d", j)))));
